Update credible icons

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
                 android:layout_gravity="center_horizontal"
                 android:scaleType="fitCenter"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/ic_brand_logo" />
 
             <LinearLayout
