--- a/app/src/main/res/layout/fragment_crypto_atm.xml
+++ b/app/src/main/res/layout/fragment_crypto_atm.xml
@@ -23,9 +23,31 @@
         android:layout_height="wrap_content"
         android:text="@string/select_crypto"
         android:gravity="center"
-        android:layout_margin="18dp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="24dp"
         style="@style/SmartPesa.Title"
+        android:textSize="26dp"
         android:id="@+id/cryptoInstruction"/>
+
+    <RelativeLayout
+        android:id="@+id/credible"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/blur_bg"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/cryptoInstruction">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_credible" />
+
+    </RelativeLayout>
 
     <GridView android:id="@+id/grid"
         android:layout_width="fill_parent"
@@ -34,13 +56,14 @@
         android:gravity="center"
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
+        android:layout_centerHorizontal="true"
         android:padding="16dp"
         android:scrollbarStyle="outsideOverlay"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_below="@+id/cryptoInstruction"
+        android:layout_below="@+id/credible"
         xmlns:android="http://schemas.android.com/apk/res/android" />
 
 </RelativeLayout>
