--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -67,8 +67,8 @@
             android:layout_alignParentTop="true"
             android:autoText="false"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:layout_margin="3dp"
+            android:padding="3dp"
             android:text="PHP"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#7f7f7f"
@@ -183,8 +183,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:layout_margin="3dp"
+            android:padding="3dp"
             android:text="USD"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#7f7f7f"
