--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,13 +22,64 @@
         app:spb_stroke_separator_length="2dp"
         app:spb_stroke_width="4dp" />
 
-    <ListView
-        android:id="@+id/settingsLV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/settingsPB"
-        android:listSelector="@android:color/transparent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/settingsPB">
+
+        <TextView
+            android:id="@+id/softposInstruct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_margin="8dp"
+            android:text="@string/softpos_instruct"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/registerBtn"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="4dp"
+                android:background="@drawable/primary_button"
+                android:text="@string/register_device"
+                android:textColor="@drawable/text_general" />
+
+            <Space
+                android:layout_width="4dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/activateBtn"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/primary_button"
+                android:text="@string/activate_device"
+                android:textColor="@drawable/text_general" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_margin="8dp"
+            android:text="@string/devices_list"/>
+
+        <ListView
+            android:id="@+id/settingsLV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:listSelector="@android:color/transparent" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
